--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
-#utf-8
-#Tue Sep 01 18:44:01 MDT 2009
-app.version=0.1
-app.servlet.version=2.4
-app.grails.version=1.1.1
-plugins.hibernate=1.1.1
+#Grails Metadata file
+#Tue Mar 02 13:27:39 MST 2010
+app.grails.version=1.2.1
 app.name=gitdemo
+app.servlet.version=2.4
+app.version=0.1
+plugins.hibernate=1.2.1
+plugins.tomcat=1.2.1
